name: project3
version: 1.0.0
license: BSD3
license-file: LICENSE
cabal-version: >= 1.18
build-type: Simple
extra-source-files: cbits

library
    build-depends: base < 5
    c-sources: cbits/check.c
    default-language: Haskell2010
    extra-libraries: tar
    exposed-modules: Project3
    
executable project3
    build-depends: base < 5, project3
    default-language: Haskell2010
    main-is: Main.hs

test-suite test
    build-depends: base < 5, project3, turtle
    main-is: Test.hs
    type: exitcode-stdio-1.0
